--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="KOBE.png" data-position="left center"><img src="KOBE.png" alt="" /></a>
+							<a class="thumbnail" href="KOBE.png" ><img src="KOBE.png" alt="" /></a>
 							<h2>Kobe Bryant</h2>
 							<p>Black Mamba</p>
 						</article>
@@ -52,7 +52,7 @@
 							<p>The Servant</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="WADE.jpg" data-position="top center"><img src="WADE.jpg" alt="" /></a>
+							<a class="thumbnail" href="WADE.jpg" data-position="top center"><img src="WAd.jpg" alt="" /></a>
 							<h2>Dwayne Wade</h2>
 							<p>The Flash</p>
 						</article>
@@ -102,11 +102,11 @@
 
 			</div>
 
-		<!-- Scripts -->
+		<!-- Scripts
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="assets/js/main.js"></script> -->
 
 	</body>
 </html>
