--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<article>
 							<a class="thumbnail" href="oneal.jpg"><img src="oneal.jpg" alt="" /></a>
 							<h2>Shaquille O'Neal</h2>
-							<p>The Shaq</p>
+							<p>Superman</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="melo.jpg"><img src="melo.jpg" alt="" /></a>
