--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>LAN</strong> <span>best maker</span></a>
+						<a href="index.html" class="logo"><strong>LAN</strong> <span>try my best</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -43,13 +43,13 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, 我來學習做網頁</h1>
+								<h1>Hi, 這也許是理想生活</h1>
 							</header>
 							<div class="content">
 								<p>學習不止，成長不停<br />
-								好好吃飯好好學習</p>
+								慢慢進步也要好好生活</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">看看吧!</a></li>
+									<li><a href="#one" class="button next scrolly">來看看吧!</a></li>
 								</ul>
 							</div>
 						</div>
@@ -62,7 +62,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/露營車.jfif" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">露營車生活</a></h3>
@@ -71,7 +71,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/露營餐車.jfif" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">擺攤人生</a></h3>
@@ -80,7 +80,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/浪貓.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">貓貓救援隊</a></h3>
@@ -89,16 +89,16 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/移動辦公.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">接案人生</a></h3>
-										<p>WORK FROM MOVING CAR</p>
+										<h3><a href="landing.html" class="link">移動辦公</a></h3>
+										<p>MAKING MONEY EVERYWHERE</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/七星潭.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">追風景go</a></h3>
@@ -107,7 +107,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/奶茶奶綠.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">旅行貓貓</a></h3>
@@ -124,7 +124,7 @@
 									</header>
 									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
+										<li><a href="練習用.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
 							</section>
@@ -161,23 +161,21 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">uraeus1213@gmail.com</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<span>0978522907</span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
+										<span>桃園市大園區學六街15號6樓</span>
 									</div>
 								</section>
 							</section>
